2009-02-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/bsp.h: Conditionally include rtems/rtems_bsdnet.h.
	* configure.ac: Add RTEMS_CHECK_NETWORKING.
	* Makefile.am: Rework.

2009-02-21	Michael Walle <michael@walle.cc>

	* startup/linkcmds: Add new sections.

2008-12-09	Jukka Pietarinen <jukka.pietarinen@mrf.fi>

	* bsp_specs: Update to reflect comments.

2008-12-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* .cvsignore: New file.

2008-12-04	Jukka Pietarinen <jukka.pietarinen@mrf.fi>

	* ChangeLog, Makefile.am, bsp_specs, configure.ac, preinstall.am,
	include/.cvsignore, include/bsp.h, include/coverhd.h,
	include/irq-config.h, include/system_conf.h, include/tm27.h,
	startup/linkcmds: New files.
