@@ -1,3 +1,10 @@
+2009-02-25	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am, configure.ac: Add SIMULATOR_FAST_IDLE,
+	BSP_PRESS_KEY_FOR_RESET, and BSP_RESET_BOARD_AT_EXIT. Use the standard
+	bsp_cleanup code.
+	* README: New file.  Include instructions on gdb simulator.
+
 2009-02-23	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* include/bsp.h: Conditionally include rtems/rtems_bsdnet.h.
